# oidc-authorizer-benchmark

./: Cargo.toml  README.md  justfile  samconfig.toml  template.yaml
alternatives/python/: handler.py  pyproject.toml  requirements.txt
alternatives/python/src/: authorizer_response.py  handler.py  key_storage.py  principal_id_claims.py
alternatives/python/utils/: authorizer_response.py  header_parser.py  key_storage.py
create-token/: Cargo.toml
create-token/src/: main.rs
docs/: logs-insights-results-2024-05-01.csv
generate-targets/: Cargo.toml
generate-targets/src/: main.rs
keys/: README.md  jwks.json
keys/key0/: jwk.json  private.pem
keys/key1/: jwk.json  private.pem
keys/key2/: jwk.json  private.pem
keys/key3/: jwk.json  private.pem
send-requests/: Cargo.toml  README.md  test-server.mjs
send-requests/src/: main.rs  stats.rs  tokengen.rs
